# mokai

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  compile_commands.json  data.txt  get.sh  mokai.toml
.packaging/aur/: PKGBUILD
src/: entery.cpp  entry.cpp
src/backend/: toolchain.cpp
src/cli/: cli.cpp  cli.hpp  exp.hpp  registery.cpp  run.cpp
src/config/: config.cpp  config.hpp  helpers.cpp  tom.hpp
src/core/: os.cpp  os.hpp
src/docs/: spec.toml
src/graph/: build_pipeline.cpp  graph.cpp  graph.hpp  graphBuildPipeline.cpp  graph_cond.cpp  source_cache.cpp  types.cpp  types.hpp
src/graph/compiler/: ToolChainFinder.cpp  clang_compiler.hpp  gcc_compiler.hpp  icompiler.hpp  msvc_compiler.hpp  tool_chain_finder.cpp  tool_chain_finder.hpp
src/graph/condition/: ConditionEval.cpp  ConditionEval.hpp
src/log/: log.cpp  log.h
src/telemetry/: log.hpp
src/templates/: template.cpp  template.hpp
src/templates/minimal/: mokai.toml
src/templates/minimal/src/: main.cpp
